[package]
name = "lightning-mindmap"
version = "0.1.0"
edition = "2021"
authors = ["Lightning MindMap Team"]
description = "Ultra-fast native mindmap application"
license = "MIT"
repository = "https://github.com/yourusername/lightning-mindmap"

[dependencies]
# GUI framework - 最小構成から始める
eframe = "0.24"
egui = "0.24"

# Serialization - 後で保存機能を追加
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
# リリースビルド最適化設定
opt-level = 3
lto = true
codegen-units = 1
strip = true
